deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acueducto-deployment
  namespace: acueducto-sonadora
  labels:
    app: acueducto
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: acueducto
  template:
    metadata:
      labels:
        app: acueducto
    spec:
        containers:
            - name: acueducto
              image: saalejo/acueducto:latest
              imagePullPolicy: Always
              ports:
                - containerPort: 8080
              resources:
                requests:
                  cpu: "50m"
                  memory: "128Mi"
                limits:
                  cpu: "300m"
                  memory: "384Mi"
