deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
  name: acueducto-ingress
  namespace: acueducto-sonadora
spec:
  ingressClassName: nginx
  rules:
  - host: acueducto-sonadora-garzonas.agapanto.com.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: acueducto-svc
            port:
              number: 8080
  tls:
  - hosts:
    - acueducto-sonadora-garzonas.agapanto.com.co
    secretName: acueducto-sonadora-garzonas-agapanto-com-co
